@@ -1,3 +1,8 @@
+2007-01-18  Mark Wielaard  <mark@klomp.org>
+
+	* DwflLine.java (toString): New method that gives a debug String
+	representation.
+
 2007-01-12  Mike Cvet  <mcvet@redhat.com>
 
 	* Dwfl.java (isLineExecutable): Added.
